kubernetes/fleet/clusters/animals/flux-system/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
  namespace: flux-system
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: sso-eg
      namespace: envoy-gateway-system
  hostnames:
    - flux-animals.home.parents-basement.win
  rules:
    - timeouts:
        request: 120s
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          port: 9080
